# scriptura

./: .gitignore  .woodpecker.yml  ARCHITECTURE.md  CHANGELOG.md  FLATPAK_RESEARCH.md  README.md  SEARCH_RESEARCH.md  _version.py  a11y.py  annotation_dialogs.py  annotations.py  archaeology_bridge.py  archaeology_reader.py  backup.py  bookmarks.py  catena_bridge.py  catena_reader.py  church_year.py  collects.py  content.py  crossref_panel.py  devotional.py  devotional_audio.py  ebible_bridge.py  empty_state.py  genbook_reader.py  gtk_utils.py  i18n.py  imagery_bridge.py  imagery_reader.py  interlinear_data.py  interlinear_flow.py  interlinear_view.py  io.github.andresmessina_SDG.Scriptura.yml  lexicon_data.py  lexicon_panel.py  main.py  meson.build  meson_post_install.py  module_manager.py  (+35 more)
.github/workflows/: ci.yml  mirror.yml
data/: collects.toml  io.github.andresmessina_SDG.Scriptura.desktop.in  io.github.andresmessina_SDG.Scriptura.metainfo.xml.in  meson.build  org.codeberg.andresmessina.BibleReader.desktop  org.codeberg.andresmessina.BibleReader.metainfo.xml  page.codeberg.andresmessina.Scriptura.desktop  page.codeberg.andresmessina.Scriptura.metainfo.xml  page.codeberg.andresmessina.Scriptura.metainfo.xml.in  style.css
data/archaeology/: scripture_in_stone.toml
data/screenshots/: README.md
flatpak/: README.md  STATUS.md  SWORD-PYTHON-BUILD.md  bible-reader.sh  scriptura.sh
flatpak/patches/: migrate-to-setuptools.diff  sword-curl-libraries.patch
po/: LINGUAS  POTFILES.in  meson.build
tests/: conftest.py  test_annotations.py  test_backup.py  test_bookmarks.py  test_catena_bridge.py  test_catena_build.py  test_catena_display.py  test_church_year.py  test_collects.py  test_content.py  test_devotional_audio.py  test_ebible_bridge.py  test_genbook_typography.py  test_gtk_utils.py  test_imagery_bridge.py  test_interlinear_data.py  test_lexicon_data.py  test_lexicon_panel.py  test_meson_manifest.py  test_module_manager_progress.py  test_module_positions.py  test_navigation.py  test_night_light.py  test_onboarding.py  test_open_data.py  test_overlays.py  test_pane.py  test_pane_content.py  test_paths.py  test_present_align.py  test_present_mode.py  test_present_paging.py  test_reading_plans.py  test_search_controller.py  test_search_panel.py  test_search_query.py  test_settings.py  test_sword_bridge.py  test_sword_import.py  test_sword_search.py  (+3 more)
tools/: ARTIFACTS_RESEARCH.md  IMAGERY_SOURCES.md  WINDOWS_PORT.md  build_catena_pack.py  build_imagery_pack.py  curated_plates.toml  dore_plates.toml  gen_maps.py  gen_psalter.py  gen_tissot.py  hurlbut_maps.toml  icon_plates.toml  manuscript_plates.toml  modern_maps.toml  oldmaster_plates.toml  psalter_plates.toml  publish-flatpak-repo.sh  schnorr_plates.toml  stained_glass_plates.toml  tissot_plates.toml  verify-pack-urls.py  verify-scroll-stability.py  verify-today.py
